native/musashi/m68kcpu/M68kcpuLibrary.java

	/**
	 * Set the callback for CPU function code changes.<br>
	 * You must enable M68K_EMULATE_FC in m68kconf.h.<br>
	 * The CPU calls this callback with the function code before every memory<br>
	 * access to set the CPU's function code according to what kind of memory<br>
	 * access it is (supervisor/user, program/data and such).<br>
	 * Default behavior: do nothing.<br>
	 * Original signature : <code>void m68k_set_fc_callback(m68k_set_fc_callback_callback_callback*)</code><br>
	 * <i>native declaration : m68k.h:279</i>
	 */
	public static void m68k_set_fc_callback(Pointer<M68kcpuLibrary.m68k_set_fc_callback_callback_callback > callback) {
		m68k_set_fc_callback(Pointer.getPeer(callback));
	}
	protected native static void m68k_set_fc_callback(@Ptr long callback);
	/**
	 * Set a callback for the instruction cycle of the CPU.<br>
	 * You must enable M68K_INSTRUCTION_HOOK in m68kconf.h.<br>
	 * The CPU calls this callback just before fetching the opcode in the<br>
	 * instruction cycle.<br>
	 * Default behavior: do nothing.<br>
	 * Original signature : <code>void m68k_set_instr_hook_callback(m68k_set_instr_hook_callback_callback_callback*)</code><br>
	 * <i>native declaration : m68k.h:288</i>
	 */
	public static void m68k_set_instr_hook_callback(Pointer<M68kcpuLibrary.m68k_set_instr_hook_callback_callback_callback > callback) {
		m68k_set_instr_hook_callback(Pointer.getPeer(callback));
	}
	protected native static void m68k_set_instr_hook_callback(@Ptr long callback);
	/**
	 * Use this function to set the CPU type you want to emulate.<br>
	 * Currently supported types are: M68K_CPU_TYPE_68000, M68K_CPU_TYPE_68010,<br>
	 * M68K_CPU_TYPE_EC020, and M68K_CPU_TYPE_68020.<br>
	 * Original signature : <code>void m68k_set_cpu_type(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:300</i>
	 */
	public static native void m68k_set_cpu_type(int cpu_type);
	/**
	 * Do whatever initialisations the core requires.  Should be called<br>
	 * at least once at init time.<br>
	 * Original signature : <code>void m68k_init()</code><br>
	 * <i>native declaration : m68k.h:305</i>
	 */
	public static native void m68k_init();
	/**
	 * Pulse the RESET pin on the CPU.<br>
	 * You *MUST* reset the CPU at least once to initialize the emulation<br>
	 * Note: If you didn't call m68k_set_cpu_type() before resetting<br>
	 *       the CPU for the first time, the CPU will be set to<br>
	 *       M68K_CPU_TYPE_68000.<br>
	 * Original signature : <code>void m68k_pulse_reset()</code><br>
	 * <i>native declaration : m68k.h:313</i>
	 */
	public static native void m68k_pulse_reset();
	/**
	 * execute num_cycles worth of instructions.  returns number of cycles used<br>
	 * Original signature : <code>int m68k_execute(int)</code><br>
	 * <i>native declaration : m68k.h:316</i>
	 */
	public static native int m68k_execute(int num_cycles);
	/**
	 * These functions let you read/write/modify the number of cycles left to run<br>
	 * while m68k_execute() is running.<br>
	 * These are useful if the 68k accesses a memory-mapped port on another device<br>
	 * that requires immediate processing by another CPU.<br>
	 * Number of cycles run so far<br>
	 * Original signature : <code>int m68k_cycles_run()</code><br>
	 * <i>native declaration : m68k.h:323</i>
	 */
	public static native int m68k_cycles_run();
	/**
	 * Number of cycles left<br>
	 * Original signature : <code>int m68k_cycles_remaining()</code><br>
	 * <i>native declaration : m68k.h:324</i>
	 */
	public static native int m68k_cycles_remaining();
	/**
	 * Modify cycles left<br>
	 * Original signature : <code>void m68k_modify_timeslice(int)</code><br>
	 * <i>native declaration : m68k.h:325</i>
	 */
	public static native void m68k_modify_timeslice(int cycles);
	/**
	 * End timeslice now<br>
	 * Original signature : <code>void m68k_end_timeslice()</code><br>
	 * <i>native declaration : m68k.h:326</i>
	 */
	public static native void m68k_end_timeslice();
	/**
	 * Set the IPL0-IPL2 pins on the CPU (IRQ).<br>
	 * A transition from < 7 to 7 will cause a non-maskable interrupt (NMI).<br>
	 * Setting IRQ to 0 will clear an interrupt request.<br>
	 * Original signature : <code>void m68k_set_irq(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:332</i>
	 */
	public static native void m68k_set_irq(int int_level);
	/**
	 * Set the virtual irq lines, where the highest level<br>
	 * active line is automatically selected.  If you use this function,<br>
	 * do not use m68k_set_irq.<br>
	 * Original signature : <code>void m68k_set_virq(unsigned int, unsigned int)</code><br>
	 * <i>native declaration : m68k.h:338</i>
	 */
	public static native void m68k_set_virq(int level, int active);
	/**
	 * Original signature : <code>int m68k_get_virq(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:339</i>
	 */
	public static native int m68k_get_virq(int level);
	/**
	 * Halt the CPU as if you pulsed the HALT pin.<br>
	 * Original signature : <code>void m68k_pulse_halt()</code><br>
	 * <i>native declaration : m68k.h:342</i>
	 */
	public static native void m68k_pulse_halt();
	/**
	 * Trigger a bus error exception<br>
	 * Original signature : <code>void m68k_pulse_bus_error()</code><br>
	 * <i>native declaration : m68k.h:346</i>
	 */
	public static native void m68k_pulse_bus_error();
	/**
	 * Get the size of the cpu context in bytes<br>
	 * Original signature : <code>int m68k_context_size()</code><br>
	 * <i>native declaration : m68k.h:352</i>
	 */
	public static native int m68k_context_size();
	/**
	 * Get a cpu context<br>
	 * Original signature : <code>int m68k_get_context(void*)</code><br>
	 * <i>native declaration : m68k.h:355</i>
	 */
	public static int m68k_get_context(Pointer<? > dst) {
		return m68k_get_context(Pointer.getPeer(dst));
	}
	protected native static int m68k_get_context(@Ptr long dst);
	/**
	 * set the current cpu context<br>
	 * Original signature : <code>void m68k_set_context(void*)</code><br>
	 * <i>native declaration : m68k.h:358</i>
	 */
	public static void m68k_set_context(Pointer<? > dst) {
		m68k_set_context(Pointer.getPeer(dst));
	}
	protected native static void m68k_set_context(@Ptr long dst);
	/**
	 * Register the CPU state information<br>
	 * Original signature : <code>void m68k_state_register(const char*, int)</code><br>
	 * <i>native declaration : m68k.h:361</i>
	 */
	public static void m68k_state_register(Pointer<Byte > type, int index) {
		m68k_state_register(Pointer.getPeer(type), index);
	}
	protected native static void m68k_state_register(@Ptr long type, int index);
	/**
	 * Peek at the internals of a CPU context.  This can either be a context<br>
	 * retrieved using m68k_get_context() or the currently running context.<br>
	 * If context is NULL, the currently running CPU context will be used.<br>
	 * Original signature : <code>int m68k_get_reg(void*, m68k_register_t)</code><br>
	 * <i>native declaration : m68k.h:368</i>
	 */
	public static int m68k_get_reg(Pointer<? > context, IntValuedEnum<M68kcpuLibrary.m68k_register_t > reg) {
		return m68k_get_reg(Pointer.getPeer(context), (int)reg.value());
	}
	protected native static int m68k_get_reg(@Ptr long context, int reg);
	/**
	 * Poke values into the internals of the currently running CPU context<br>
	 * Original signature : <code>void m68k_set_reg(m68k_register_t, unsigned int)</code><br>
	 * <i>native declaration : m68k.h:371</i>
	 */
	public static void m68k_set_reg(IntValuedEnum<M68kcpuLibrary.m68k_register_t > reg, int value) {
		m68k_set_reg((int)reg.value(), value);
	}
	protected native static void m68k_set_reg(int reg, int value);
	/**
	 * Check if an instruction is valid for the specified CPU type<br>
	 * Original signature : <code>int m68k_is_valid_instruction(unsigned int, unsigned int)</code><br>
	 * <i>native declaration : m68k.h:374</i>
	 */
	public static native int m68k_is_valid_instruction(int instruction, int cpu_type);
	/**
	 * Disassemble 1 instruction using the epecified CPU type at pc.  Stores<br>
	 * disassembly in str_buff and returns the size of the instruction in bytes.<br>
	 * Original signature : <code>int m68k_disassemble(char*, unsigned int, unsigned int)</code><br>
	 * <i>native declaration : m68k.h:379</i>
	 */
	public static int m68k_disassemble(Pointer<Byte > str_buff, int pc, int cpu_type) {
		return m68k_disassemble(Pointer.getPeer(str_buff), pc, cpu_type);
	}
	protected native static int m68k_disassemble(@Ptr long str_buff, int pc, int cpu_type);
	/**
	 * Same as above but accepts raw opcode data directly rather than fetching<br>
	 * via the read/write interfaces.<br>
	 * Original signature : <code>int m68k_disassemble_raw(char*, unsigned int, const unsigned char*, const unsigned char*, unsigned int)</code><br>
	 * <i>native declaration : m68k.h:384</i>
	 */
	public static int m68k_disassemble_raw(Pointer<Byte > str_buff, int pc, Pointer<Byte > opdata, Pointer<Byte > argdata, int cpu_type) {
		return m68k_disassemble_raw(Pointer.getPeer(str_buff), pc, Pointer.getPeer(opdata), Pointer.getPeer(argdata), cpu_type);
	}
	protected native static int m68k_disassemble_raw(@Ptr long str_buff, int pc, @Ptr long opdata, @Ptr long argdata, int cpu_type);
	/**
	 * quick disassembly (used for logging)<br>
	 * Original signature : <code>char* m68ki_disassemble_quick(unsigned int, unsigned int)</code><br>
	 * <i>native declaration : m68kcpu.h:991</i>
	 */
	public static Pointer<Byte > m68ki_disassemble_quick(int pc, int cpu_type) {
		return (Pointer)Pointer.pointerToAddress(m68ki_disassemble_quick$2(pc, cpu_type), Byte.class);
	}
	@Ptr 
	@Name("m68ki_disassemble_quick") 
	protected native static long m68ki_disassemble_quick$2(int pc, int cpu_type);
	/**
	 * Original signature : <code>void dump_info(char*)</code><br>
	 * <i>native declaration : m68kcpu.h:992</i>
	 */
	public static void dump_info(Pointer<Byte > charPtr1) {
		dump_info(Pointer.getPeer(charPtr1));
	}
	protected native static void dump_info(@Ptr long charPtr1);
	/**
	 * ---------------------------- Read Immediate ----------------------------<br>
	 * Original signature : <code>uint pmmu_translate_addr(uint)</code><br>
	 * <i>native declaration : m68kcpu.h:1001</i>
	 */
	public static native int pmmu_translate_addr(int addr_in);
	/** C type : extern m68ki_cpu_core */
	public m68ki_cpu_core m68ki_cpu() {
		try {
			return (m68ki_cpu_core)BridJ.getNativeLibrary("m68kcpu").getSymbolPointer("m68ki_cpu").as(m68ki_cpu_core.class).get();
		}catch (Throwable $ex$) {
			throw new RuntimeException($ex$);
		}
	}
	/** C type : extern m68ki_cpu_core */
	public M68kcpuLibrary m68ki_cpu(m68ki_cpu_core m68ki_cpu) {
		try {
			{
				BridJ.getNativeLibrary("m68kcpu").getSymbolPointer("m68ki_cpu").as(m68ki_cpu_core.class).set(m68ki_cpu);
				return this;
			}
		}catch (Throwable $ex$) {
			throw new RuntimeException($ex$);
		}
	}
	/** C type : extern sint */
	public int m68ki_remaining_cycles() {
		try {
			return (int)BridJ.getNativeLibrary("m68kcpu").getSymbolPointer("m68ki_remaining_cycles").getInt();
		}catch (Throwable $ex$) {
			throw new RuntimeException($ex$);
		}
	}
	/** C type : extern sint */
	public M68kcpuLibrary m68ki_remaining_cycles(int m68ki_remaining_cycles) {
		try {
			{
				BridJ.getNativeLibrary("m68kcpu").getSymbolPointer("m68ki_remaining_cycles").setInt(m68ki_remaining_cycles);
				return this;
			}
		}catch (Throwable $ex$) {
			throw new RuntimeException($ex$);
		}
	}
	/** C type : extern uint */
	public int m68ki_tracing() {
		try {
			return (int)BridJ.getNativeLibrary("m68kcpu").getSymbolPointer("m68ki_tracing").getInt();
		}catch (Throwable $ex$) {
			throw new RuntimeException($ex$);
		}
	}
	/** C type : extern uint */
	public M68kcpuLibrary m68ki_tracing(int m68ki_tracing) {
		try {
			{
				BridJ.getNativeLibrary("m68kcpu").getSymbolPointer("m68ki_tracing").setInt(m68ki_tracing);
				return this;
			}
		}catch (Throwable $ex$) {
			throw new RuntimeException($ex$);
		}
	}
